[package]
name = "rusty-js-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3
incremental = true  
codegen-units = 16

[dependencies]
swc_ecmascript = {version="0.203", features=["parser", "dep_graph", ]}
swc_common = "0.29.0"
swc_atoms = "0.4.18"

cranelift = "0.88.0"
cranelift-module = "0.88.0"
cranelift-native = "0.88.0"
cranelift-jit = "0.88.0"

string-interner = "*"
lazy_static = "*"
crossbeam-channel = "*"
parking_lot = "*"
lock_api = "*"

num-traits = "*"
memmap2 = "*"
unicode-id-start = "*"
likely_stable = "*"
array_tool = "*"
corosensei = {version = "0.1", optional = true}
regress = {version = "*", optional = true}

[features]
default = ["corosensei", "regress"]
logging = []