[package]
name = "rusty-js-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3
incremental = true  
codegen-units = 16

[build-dependencies]
flate2 = "1.0"
ureq = "2.6"
tar = "0.4"

[dependencies]
rusty-js-macros = {version = "*", path = "../rusty-js-macros"}

swc_ecmascript = {version="0.203", features=["parser", "dep_graph", "transforms", "optimization", "visit"]}
swc_common = "0.29.0"
swc_atoms = "0.4.18"

cranelift = "0.88.2"
cranelift-module = "0.88.2"
cranelift-native = "0.88.2"
cranelift-jit = "0.88.2"
cranelift-interpreter = "0.88.2"

inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm13-0"] }
#wasmer = "2.3.0"

futures = "*"
tokio = { version = "1.21.2", features = ["rt", "rt-multi-thread", "signal", "sync", "time", "parking_lot"] }

num-bigint = "*"
fxhash = "*"
lazy_static = "*"
crossbeam-channel = "*"
parking_lot = "*"
lock_api = "*"

fast-float = "0.2"
num-traits = "*"
memmap2 = "*"
unicode-id-start = "*"
likely_stable = "*"
array_tool = "*"
#corosensei = {version = "0.1", optional = true}
regress = {version = "*", optional = true}

[features]
default = ["regress"]
logging = []