[package]
name = "rusty-js-webgl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
khronos-egl = {version = "4.1", features = ["dynamic"]}
glow = "0.11"
libloading = "*"

[dev-dependencies]
image = "*"